package MainMenuFX.LoginFX;

public class LoginController {

}
