package MainMenuFX;

public class MMController {
}
