@startuml

title __MAINMENUFX's Class Diagram__\n

 namespace MainMenuFX {
     class MainMenuFX.MMController {
     }
   }

    namespace MainMenuFX {
     class MainMenuFX.Main {
         {static} + main()
         + start()
     }
    }


  namespace MainMenuFX {
    namespace LoginFX {
      class MainMenuFX.LoginFX.Login {
          {static} + main()
          + start()
      }
    }
  }


  namespace MainMenuFX {
    namespace LoginFX {
      class MainMenuFX.LoginFX.LoginController {
      }
    }
  }
namespace CustomerVIew {
    class CustomerVIew.Customer {
        {static} + main()
        + start()
    }
  }


  namespace CustomerVIew {
    class CustomerVIew.CustomerController {
    }
  }
   namespace CustomerVIew {
      namespace OrderView {
        class CustomerVIew.OrderView.OrderView {
            {static} + main()
            + start()
        }
      }
    }


    namespace CustomerVIew {
      namespace OrderView {
        class CustomerVIew.OrderView.OrderViewController {
        }
      }
    }

  namespace CustomerVIew {
    namespace CartView {
      class CustomerVIew.CartView.CartView {
          {static} + main()
          + start()
      }
    }
  }


  namespace CustomerVIew {
    namespace CartView {
      class CustomerVIew.CartView.CartViewController {
      }
    }
  }

namespace AdminView {
    class AdminView.AdminView {
        {static} + main()
        + start()
    }
  }


  namespace AdminView {
    class AdminView.AdminViewController {
    }
  }

    namespace AdminView {
      namespace Products {
        class AdminView.Products.Product {
            {static} + main()
            + start()
        }
      }
    }


    namespace AdminView {
      namespace Products {
        class AdminView.Products.ProductController {
        }
      }
    }

namespace AdminView {
    namespace Inventory {
      class AdminView.Inventory.Inventory {
          {static} + main()
          + start()
      }
    }
  }


  namespace AdminView {
    namespace Inventory {
      class AdminView.Inventory.InventoryController {
      }
    }
  }
namespace AdminView {
    namespace AdminTools {
      class AdminView.AdminTools.AdminTools {
          {static} + main()
          + start()
      }
    }
  }


  namespace AdminView {
    namespace AdminTools {
      class AdminView.AdminTools.AdminToolsController {
      }
    }
  }

  namespace CashierView {
      class CashierView.CashierView {
          {static} + main()
          + start()
      }
    }


    namespace CashierView {
      class CashierView.CashierViewController {
      }
    }


    namespace CashierView {
      class CashierView.Receipt {
      }
    }

  namespace CashierView {
      namespace OrderView {
        class CashierView.OrderView.OrderView {
            {static} + main()
            + start()
        }
      }
    }


    namespace CashierView {
      namespace OrderView {
        class CashierView.OrderView.OrderViewController {
        }
      }
    }
  namespace CashierView {
      namespace CartView {
        class CashierView.CartView.CartView {
            {static} + main()
            + start()
        }
      }
    }


    namespace CashierView {
      namespace CartView {
        class CashierView.CartView.CartViewController {
        }
      }
    }


    CashierView.CartView.CartView -up-|> javafx.application.Application
    CashierView.OrderView.OrderView -up-|> javafx.application.Application
    CashierView.CashierView -up-|> javafx.application.Application

  AdminView.Inventory.Inventory -up-|> javafx.application.Application
    AdminView.Products.Product -up-|> javafx.application.Application

  AdminView.AdminView -up-|> javafx.application.Application

  CustomerVIew.CartView.CartView -up-|> javafx.application.Application

   MainMenuFX.LoginFX.Login -up-|> javafx.application.Application
   MainMenuFX.Main -up-|> javafx.application.Application

right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
